# pyCDMConnector

./: .coverage  CHANGELOG.md  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  styleguide.md
.github/workflows/: coverage.yml  docs.yml  duckdb-test.yaml  postgres-test.yaml  redshift-test.yaml  snowflake-test.yaml  spark-test.yaml  sqlserver-test.yaml
docs/: contents.html  contributing.html  development.html  index.html  robots.txt  search.json  sitemap.xml
docs-src/: .gitignore  README.md  _quarto.yml  contents.qmd  contributing.qmd  development.qmd  index.qmd  objects.json
docs-src/notebooks/: 00_welcome_your_first_cdm.ipynb  01_lazy_queries_and_pipelines.ipynb  02_understanding_omop_people_time_domains.ipynb  03_story_gibleed_end_to_end.ipynb  04_measurement_distributions_with_guardrails.ipynb  05_cohorts_101_tables_attrition_counts.ipynb  06_cohorts_from_json_circe_atlas.ipynb  07_cohort_characterization_table1.ipynb  08_performance_pushdown_and_materialization.ipynb  09_exporting_results_and_tables.ipynb  10_pedagogical_omop_gibleed.qmd  README.md  index.qmd
docs-src/reference/: CDMConnectorError.qmd  CDMValidationError.qmd  Cdm.qmd  CohortError.qmd  EunomiaError.qmd  Result.qmd  SourceError.qmd  SummarisedResult.qmd  TableNotFoundError.qmd  _sidebar.yml  add_age.qmd  add_categories.qmd  add_cdm_name.qmd  add_cohort_intersect_count.qmd  add_cohort_intersect_date.qmd  add_cohort_intersect_days.qmd  add_cohort_intersect_field.qmd  add_cohort_intersect_flag.qmd  add_cohort_name.qmd  add_concept_intersect_count.qmd  add_concept_intersect_date.qmd  add_concept_intersect_days.qmd  add_concept_intersect_field.qmd  add_concept_intersect_flag.qmd  add_concept_name.qmd  add_date_of_birth.qmd  add_death_date.qmd  add_death_days.qmd  add_death_flag.qmd  add_demographics.qmd  add_future_observation.qmd  add_in_observation.qmd  add_observation_period_id.qmd  add_prior_observation.qmd  add_sex.qmd  add_table_intersect_count.qmd  add_table_intersect_date.qmd  add_table_intersect_days.qmd  add_table_intersect_field.qmd  add_table_intersect_flag.qmd  (+78 more)
docs-src/stylesheets/: extra.css
docs-src/tutorials/: database_connection_examples.qmd  wasm_debug_header.html  wasm_example_analysis.qmd
docs/notebooks/: 00_welcome_your_first_cdm.html  01_lazy_queries_and_pipelines.html  02_understanding_omop_people_time_domains.html  03_story_gibleed_end_to_end.html  04_measurement_distributions_with_guardrails.html  05_cohorts_101_tables_attrition_counts.html  06_cohorts_from_json_circe_atlas.html  07_cohort_characterization_table1.html  08_performance_pushdown_and_materialization.html  09_exporting_results_and_tables.html  10_pedagogical_omop_gibleed.html  index.html
docs/reference/: CDMConnectorError.html  CDMValidationError.html  Cdm.html  CohortError.html  EunomiaError.html  Result.html  SourceError.html  TableNotFoundError.html  add_age.html  add_demographics.html  add_sex.html  cdm_disconnect.html  cdm_from_con.html  cdm_from_tables.html  cdm_snapshot.html  cdm_tables.html  collect.html  compute.html  download_eunomia_data.html  drop_table.html  eunomia_dir.html  eunomia_is_available.html  example_datasets.html  generate_cohort_set.html  index.html  insert_table.html  require_eunomia.html
docs/tutorials/: wasm_example_analysis.html
scripts/: check_eunomia_coverage.py  generate_ibis_stubs.py  translate_queries_to_ibis.py  verify_snapshot_returns_dataframe.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/RELEASE_CHECKLIST/: index.html
site/cohorts/: index.html
site/db-backends/: index.html
site/getting-started/: index.html
site/ibis-vs-dplyr/: index.html
site/search/: search_index.json
site/tutorial-cdm-attributes/: index.html
site/tutorial-cdm-backends/: index.html
site/tutorial-cdm-reference/: index.html
site/tutorial-codelists/: index.html
site/tutorial-cohort-tables-omopgenerics/: index.html
site/tutorial-cohortcharacteristics-large-scale/: index.html
site/tutorial-cohortcharacteristics-overlap-timing/: index.html
tests/: conftest.py  test_cdm.py  test_cdm_live.py  test_codelist.py  test_cohorts.py  test_contracts.py  test_eunomia.py  test_generate_cohort_set_live.py  test_io.py  test_large_scale_characteristics.py  test_optional_imports.py  test_summarised_result.py  test_vis.py  test_vocabulary.py
(+51 files in other folders)
